<resources>
    <string name="app_name">AndroidPI</string>
    <string name="name">ФИО:</string>
    <string name="hint">Транспорт:</string>
    <string name="num">Кол-во не вып.:</string>
    <string name="num_of_participants">Дата рождения:</string>
    <string name="time_for_solve">Дата приема на работу:</string>
    <string name="max_score">Кол-во вып.:</string>
    <string name="is_complicated">Доставляет за город:</string>
    <string name="condition">Описание:</string>
    <string name="button_ok">Ок</string>
    <string name="button_cancel">Отмена</string>
    <string name="button_del">Удалить</string>
    <string name="button_edit">Изменить</string>
    <string name="name_hint">ФИО</string>
    <string name="hint_hint">вид</string>
    <string name="num_hint">шт.</string>
    <string name="num_of_participants_hint">dd.mm.yyyy</string>
    <string name="time_for_solve_hint">dd.mm.yyyy</string>
    <string name="max_score_hint">шт.</string>
    <string name="is_complicated_hint">Да/Нет</string>
    <string name="condition_hint">Введите описание</string>
    <string name="plus_button_description">Добавить курьера</string>
    <string name="plus">➕</string>
</resources>